--- a/style/css/countdown.css
+++ b/style/css/countdown.css
@@ -156,7 +156,7 @@ a {
       font-weight: 400;
       color: white;
       padding: 0px 5%; }
-      #hero .header-content h1 span {
+      #hero .header-content h1 .header-title {
         font-size: 50px;
         text-transform: uppercase;
         font-weight: 600; }
@@ -211,6 +211,13 @@ a {
   #hero .social-links-header:hover {
     background-color: rgba(255, 255, 255, 0.2); }
 
+@media screen and (max-width: 650px) {
+  #hero .header-content .header-title span {
+    display: block; }
+  #hero .header-content button {
+    display: block; }
+  #hero .header-content #sponsor-button {
+    margin-top: 15px; } }
 /*Without Event info 550px width */
 @media screen and (max-width: 778px) {
   .nav-mobile {
@@ -219,6 +226,13 @@ a {
 
   .nav-right-content a {
     display: none !important; } }
+@media screen and (max-width: 415px) {
+  #hero .header-content h1 {
+    font-size: 28px; }
+    #hero .header-content h1 .header-title {
+      font-size: 40px; }
+  #hero .header-content h3 {
+    font-size: 17px; } }
 #event-info {
   height: auto;
   background-image: url("../../images/congruent_outline.png");
@@ -434,6 +448,9 @@ a {
 @media screen and (max-width: 700px) {
   .silver .sponsor-icons {
     width: 80% !important; } }
+@media screen and (max-width: 450px) {
+  #sponsors h2 {
+    font-size: 48px; } }
 #team {
   text-align: left;
   background-color: #1f1f1f;
@@ -441,51 +458,58 @@ a {
   background-repeat: repeat; }
   #team .team-container {
     padding: 5% 5%; }
-  #team h2 {
-    font-weight: 500;
-    font-size: 60px;
-    letter-spacing: 4px;
-    color: white;
-    text-transform: uppercase; }
-  #team h3 {
-    font-weight: 300;
-    padding-bottom: 50px;
-    letter-spacing: 2px;
-    color: white;
-    text-align: justify; }
-  #team hr {
-    border: none;
-    height: 2px;
-    background-color: white;
-    margin: 15px 0px 25px 0px; }
+    #team .team-container__header h2 {
+      font-weight: 500;
+      font-size: 60px;
+      letter-spacing: 4px;
+      color: white;
+      text-transform: uppercase; }
+    #team .team-container__header h3 {
+      font-weight: 300;
+      padding-bottom: 50px;
+      letter-spacing: 2px;
+      color: white;
+      text-align: justify; }
+    #team .team-container__header hr {
+      border: none;
+      height: 2px;
+      background-color: white;
+      margin: 15px 0px 25px 0px; }
   #team .team-grid-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; }
-    #team .team-grid-container .team-grid {
+    #team .team-grid-container .team-member {
       width: 27%;
       text-align: center;
       background-color: white;
       margin: 20px;
-      max-height: 381px;
-      height: 381px; }
-      #team .team-grid-container .team-grid h3 {
-        padding: 20px 0px;
-        color: black;
-        text-align: center;
-        font-weight: 500; }
-      #team .team-grid-container .team-grid h5 {
-        margin: 0px;
-        padding: 0px 0px 30px 0px;
-        font-weight: 300;
-        font-size: 18px;
-        width: 90%;
-        margin: auto; }
-      #team .team-grid-container .team-grid .team-member-picture {
+      height: 350px; }
+      #team .team-grid-container .team-member__picture {
         width: 100%;
         background-size: cover;
         background-position: center;
-        height: 250px; }
+        height: 60%; }
+      #team .team-grid-container .team-member__text {
+        height: 40%;
+        vertical-align: middle;
+        line-height: inherit;
+        text-align: center; }
+        #team .team-grid-container .team-member__text h3 {
+          padding-bottom: 5px;
+          color: black;
+          text-align: center;
+          font-weight: 500; }
+        #team .team-grid-container .team-member__text h5 {
+          margin: 0px;
+          font-weight: 300;
+          font-size: 18px;
+          width: 90%;
+          margin: auto; }
+        #team .team-grid-container .team-member__text__content {
+          position: relative;
+          top: 50%;
+          transform: translateY(-50%); }
   #team #team-slit-bottom {
     width: 100%;
     height: 103px;
@@ -494,53 +518,39 @@ a {
     clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 66%); }
 
 /*Team Images*/
-#t1 {
-  background-image: url("../../images/team/oliver.jpg"); }
-
 #t2 {
   background-image: url("../../images/team/tom.jpg"); }
-
-#t3 {
-  background-image: url("../../images/team/adam.jpg"); }
-
-#t4 {
-  background-image: url("../../images/team/pandelis.jpg"); }
 
 #t5 {
   background-image: url("../../images/team/alex.jpg"); }
 
-#t6 {
-  background-image: url("../../images/team/tomcamb.jpg"); }
-
 #t7 {
   background-image: url("../../images/team/liam.jpg"); }
 
-#t8 {
-  background-image: url("../../images/team/cat.jpg"); }
-
-#t9 {
-  background-image: url("../../images/team/matt.jpg"); }
-
-#t10 {
-  background-image: url("../../images/team/jack.jpg"); }
-
-#t11 {
-  background-image: url("../../images/team/andrew.jpg"); }
-
-#t12 {
-  background-image: url("../../images/team/emma.jpg"); }
-
+@media screen and (min-width: 1700px) {
+  #team .team-grid-container .team-grid {
+    height: 550px; }
+  #team .team-grid-container .team-member__picture {
+    height: 70%; }
+  #team .team-grid-container .team-member__text {
+    height: 30%; } }
+@media screen and (min-width: 1450px) {
+  #team .team-grid-container .team-grid {
+    height: 420px; } }
 @media screen and (max-width: 980px) {
-  .team-grid {
-    width: 43% !important; } }
+  #team .team-grid-container .team-member {
+    height: 400px;
+    width: 43%; } }
 @media screen and (max-width: 715px) {
   .team-grid {
-    width: 70% !important;
-    max-height: 450px !important;
-    height: 450px !important; }
+    max-height: 450px;
+    height: 450px; }
 
-  .team-member-picture {
-    height: 330px !important; } }
+  #team .team-grid-container .team-member {
+    width: 70%; } }
+@media screen and (max-width: 500px) {
+  #team .team-grid-container .team-member {
+    width: 90%; } }
 footer {
   height: 80px;
   background-color: #1f1f1f;
