--- a/style/scss/_sponsors.scss
+++ b/style/scss/_sponsors.scss
@@ -117,3 +117,11 @@
     width: 80% !important;
   }
 }
+
+@media screen and (max-width: 450px) {
+  #sponsors{
+    h2{
+      font-size: 48px;
+    }
+  }
+}
