--- a/style/scss/countdown.scss
+++ b/style/scss/countdown.scss
@@ -1,59 +1,27 @@
-@import 'main';
-
-body{
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background-image: url('../../images/congruent_outline.png');
-  background-repeat: repeat;
-}
-#main-body{
-  width: 100%;
-  height: auto;
-  margin: auto;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-  color: white;
-  .countdown-container{
-    height: auto;
-    width: 100%;
-    margin: auto;
-    //background-color: rgba(0,0,0,0.5);
-    padding: 50px 0px;
-    border-radius: 5px;
-    h2{
-      font-size: 40px;
-      font-weight: 300;
-      letter-spacing: 3px;
-      text-transform: uppercase;
+#countdown{
+  div{
+    text-align: center;
+    display: inline-block;
+    font-family: "ingra", Arial;
+    margin: 20px;
+    .days, .hours, .minutes, .seconds{
+      font-size: 50px;
     }
-    h3{
-      font-size: 30px;
-      font-weight: 300;
+    .days, .days, .hours, .minutes, .seconds, .smalltext{
+      display: block;
     }
-    #countdown {
-      text-align: center;
-      color: white;
-      font-family: 'ingra', sans-serif;
-      font-size: 60px;
-      letter-spacing: 6px;
-      #days, #hours, #minutes, #seconds {
-        margin: 40px 0px;
-        display: inline-block;
-        width: 20%;
-        font-weight: 500;
-        h3 {
-          font-size: 15px;
-          font-weight: 300;
-          leter-spacing: 0px;
-        }
-      }
+    .smalltext{
+      font-size: 25px;
+      letter-spacing: 2px;
+      font-weight: 300;
     }
   }
-  img{
-    width: 30%;
-    margin: 30px 0px;
+}
+
+@media screen and (max-width: 450px){
+  #countdown{
+    div{
+      display: block;
+    }
   }
 }
