--- a/style/scss/_sponsors.scss
+++ b/style/scss/_sponsors.scss
@@ -29,7 +29,7 @@
   }
   .sponsors-list {
     text-align: center;
-    padding-bottom: 80px;
+    //padding-bottom: 80px;
     .gold .sponsor-icons{
       width: 50% !important;
     }
