--- a/style/scss/_sponsors.scss
+++ b/style/scss/_sponsors.scss
@@ -29,7 +29,7 @@
   }
   .sponsors-list {
     text-align: center;
-    //padding-bottom: 80px;
+    padding-bottom: 80px;
     .gold .sponsor-icons{
       width: 50% !important;
     }
@@ -47,7 +47,7 @@
       display: block;
       margin: auto;
     }
-    .gold, .silver, .bronze, .partner {
+    .building, .gold, .silver, .bronze, .partner {
       text-align: center;
       margin-bottom: 100px;
       h3{
