--- a/style/scss/_team.scss
+++ b/style/scss/_team.scss
@@ -91,6 +91,9 @@
 #t7{
   background-image: url("../../images/team/liam.jpg");
 }
+#team-cat{
+  background-image: url("../../images/team/cat.jpg");
+}
 
 @media screen and (min-width: 1700px){
   #team{
@@ -157,6 +160,3 @@
     }
   }
 }
-
-
-
