Fix random styling things

--- a/style/css/typeform.css
+++ b/style/css/typeform.css
@@ -12,7 +12,7 @@ iframe {
   border: 0; }
 
 iframe #background {
-  background-image: url("images/millenium-point.jpg") !important; }
+  background-image: url("http://oi64.tinypic.com/an0mz4.jpg") !important; }
 
 #fixed-footer > .background {
   background-color: rgba(0, 0, 0, 0.6); }
