--- a/style/css/main.css
+++ b/style/css/main.css
@@ -86,10 +86,10 @@ a {
       letter-spacing: 3px;
       font-size: 35px; }
   .navigation .nav-right {
-    width: 76%;
-    margin-right: 12%;
+    width: 88%;
     float: right;
-    display: inline-block; }
+    display: inline-block;
+    float: right; }
     .navigation .nav-right .nav-right-content {
       float: right;
       width: auto; }
@@ -107,22 +107,26 @@ a {
         display: none;
         position: relative;
         z-index: 1000; }
-    .navigation .nav-right a {
-      display: inline-block;
-      padding: 20px;
-      text-decoration: none;
-      color: white;
-      cursor: pointer;
-      text-transform: uppercase;
-      vertical-align: top; }
-    .navigation .nav-right a:hover {
-      position: relative;
-      border-top: 5px solid white;
-      padding-top: 10px; }
-    .navigation .nav-right img {
-      height: 150px;
-      display: inline-block;
-      padding-right: 10px; }
+      .navigation .nav-right .nav-right-content .links {
+        display: inline; }
+        .navigation .nav-right .nav-right-content .links a {
+          display: inline-block;
+          padding: 20px;
+          text-decoration: none;
+          color: white;
+          cursor: pointer;
+          text-transform: uppercase;
+          vertical-align: top; }
+        .navigation .nav-right .nav-right-content .links a:hover {
+          position: relative;
+          border-top: 5px solid white;
+          padding-top: 10px; }
+        .navigation .nav-right .nav-right-content .links img {
+          height: 150px;
+          display: inline-block;
+          padding-right: 10px; }
+      .navigation .nav-right .nav-right-content .trust-badge {
+        margin-right: 20px; }
 
 .video-container {
   position: absolute;
@@ -207,8 +211,8 @@ a {
       display: block;
       height: 20px;
       cursor: pointer; }
-    #hero .social-links-header #facebook {
-      margin-bottom: 30px; }
+    #hero .social-links-header #facebook, #hero .social-links-header #twitter {
+      margin-bottom: 20px; }
   #hero .social-links-header:hover {
     background-color: rgba(255, 255, 255, 0.2); }
 
