Updated links to use HTM Blue

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -36,7 +36,8 @@ button {
 
 a {
   outline: none;
-  text-decoration: none; }
+  text-decoration: none;
+  color: #2F8AD9 }
 
 * {
   transition: all 0.3s ease; }
