HTM Blue for links

--- a/style/scss/event-info-main.scss
+++ b/style/scss/event-info-main.scss
@@ -36,9 +36,10 @@ Global styles
 button{
   outline: none;
 }
-a{
+a {
   outline: none;
   text-decoration: none;
+  color: #2F8AD9;
 }
 *{
   transition: all 0.3s ease;
