--- a/style/css/main.css
+++ b/style/css/main.css
@@ -37,7 +37,7 @@ button {
 a {
   outline: none;
   text-decoration: none;
-  color: #2F8AD9 }
+  color: #2F8AD9; }
 
 * {
   transition: all 0.3s ease; }
