--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -35,12 +35,13 @@
     .team-member{
       text-align: center;
       background-color: white;
-      margin: 20px;
+      margin: 10px;
       display: flex;
       flex-direction: column;
+      height: 400px;
       &__picture{
         width: 100%;
-        height: 200px;
+        height: 75%;
         object-fit: cover;
       }
       &__text{
@@ -86,10 +87,13 @@
 @media screen and (max-width: 1000px){
   .team-grid-container{
     grid-template-columns: repeat(2, 1fr) !important;
+    .team-member{
+      height: 200px;
+    }
   }
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 600px){
   .team-grid-container{
     grid-template-columns: 1fr !important;
   }
