--- a/_sass/event-info.scss
+++ b/_sass/event-info.scss
@@ -17,7 +17,7 @@ body{
     h1{
       color: white;
       letter-spacing: 3px;
-      font-size: 35px;
+      font-size: xx-large;
     }
     img{
       height: 50px;
@@ -87,12 +87,12 @@ body{
     h1{
       font-weight: 600;
       letter-spacing: 3px;
-      font-size: 50px;
+      font-size: xx-;
       text-transform: uppercase;
     }
     h4{
       font-weight: 300;
-      letter-spacing: 15px;
+      letter-spacing: 0px;
       font-size: 30px;
       text-transform: uppercase;
     }
