--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -160,15 +160,15 @@
     border-bottom: 2px solid white;
     border-top: 2px solid white;
     border-radius: 5px 0px 0px 5px;
-    padding: 20px 10px;
+    padding: 10px 10px;
     transition: all 0.3s ease;
     img{
       display: block;
       height: 20px;
       cursor: pointer;
     }
-    #facebook,#twitter{
-      margin-bottom: 20px;
+    #logo{
+      margin: 10px 0px 10px 0px;
     }
   }
   .social-links-header:hover{
@@ -178,7 +178,7 @@
 
 
 
-@media screen and (max-width: 650px){
+@media screen and (max-width: 600px){
   #hero{
     .header-content{
       .header-title{
