--- a/_sass/info.scss
+++ b/_sass/info.scss
@@ -28,14 +28,14 @@
     color: black;
   }
   h1{
-    font-size: 80px;
+    font-size: xx-large;
     color: white;
     font-weight: 500;
     letter-spacing: 6px;
     padding-top: 50px;
   }
   h3{
-    font-size: 35px;
+    font-size: x-large;
     color: white;
     font-weight: 500;
     letter-spacing: 3px;
@@ -43,17 +43,16 @@
   p{
     color: white;
     letter-spacing: 1px;
-    font-size: 20px;
-    padding: 20px 0px;
+    font-size: medium;
+    padding: 10px 0px;
   }
   .faq-post{
-    margin: 80px 0px;
+    margin: 40px 0px;
     color: white;
     h2{
-      margin: 10px 0px;
+      margin: 5px 0px;
       font-weight: 500;
-      font-size: 35px;
-      letter-spacing: 4px;
+      font-size: x-large;
     }
     hr{
       width: 5%;
@@ -65,7 +64,7 @@
     }
     p{
       font-weight: 400;
-      font-size: 20px;
+      font-size: medium;
     }
   }
   .google-maps{
@@ -106,7 +105,7 @@
   text-align: center;
   background-image: url("../../images/cream_back.png");
   background-repeat: repeat;
-  padding: 50px 0px 0px 0px;
+  padding: 30px 0px 0px 0px;
   img{
     width: 100px;
     margin: 30px;
@@ -146,7 +145,7 @@
   }
 }
 
-@media screen and (max-width: 850px){
+@media screen and (max-width: 600px){
   #event-countdown .countdown{
     margin: 100px 0px !important;
   }
