Font of ul and li

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@ html, body, article, header, footer{
   padding: 0px;
   margin: 0px;
 }
-h1, h2, h3, h4, h4, h5, h6, p, a{
+h1, h2, h3, h4, h4, h5, h6, p, a, ul, li{
   margin: 0px;
   font-family: $font;
 }
