Fix up weirdly-size sponsor icons

--- a/_sass/sponsors.scss
+++ b/_sass/sponsors.scss
@@ -52,8 +52,10 @@
         display: inline-block;
         width: 28%;
         margin: 20px;
-        img{
+        img {
           width: 100%;
+          max-height: 200px;
+          object-fit: contain;
         }
       }
     }
